hello-world-frontend/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dpl-hello-world-frontend
  namespace: multi-cloud-tech-preview
  labels:
    app: hello-world-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world-frontend
    spec:
      containers:
      - name: hello-world-frontend
        image: ibmcloudsecurity/multi-cloud-tech-preview-hello-world-frontend:latest
        ports:
        - containerPort: 3000
