hello-world-frontend/kubernetes/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-hello-world-frontend
  namespace: multi-cloud-tech-preview
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
