hello-world-frontend/kubernetes/hello-world-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-cloud-tech-preview
---
apiVersion: v1
kind: Service
metadata:
  name: svc-hello-world-api
  namespace: multi-cloud-tech-preview
  labels:
    app: hello-world-frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
  selector:
    app: hello-world-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: svc-hello-world-web
  namespace: multi-cloud-tech-preview
  labels:
    app: hello-world-frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
  selector:
    app: hello-world-frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-hello-world-frontend
  namespace: multi-cloud-tech-preview
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-hello-world-frontend
  namespace: multi-cloud-tech-preview
spec:
  hosts:
  - "*"
  gateways:
  - gw-hello-world-frontend
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        port:
          number: 3000
        host: svc-hello-world-api
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: svc-hello-world-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dpl-hello-world-frontend
  namespace: multi-cloud-tech-preview
  labels:
    app: hello-world-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world-frontend
    spec:
      containers:
      - name: hello-world-frontend
        image: ibmcloudsecurity/multi-cloud-tech-preview-hello-world-frontend:latest
        ports:
        - containerPort: 3000
