hello-world-frontend/kubernetes/istio-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-hello-world-backend
  namespace: multi-cloud-tech-preview
spec:
  hosts:
  - 169.60.165.4
  - appid-oauth.ng.bluemix.net
  location: MESH_EXTERNAL
  ports:
  - name: http-1
    number: 31380
    protocol: HTTP
  - name: http-2
    number: 443
    protocol: HTTPS
  resolution: DNS
