hello-world-frontend/kubernetes/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-hello-world-frontend
  namespace: multi-cloud-tech-preview
spec:
  hosts:
  - "*"
  gateways:
  - gw-hello-world-frontend
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        port:
          number: 3000
        host: svc-hello-world-api
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: svc-hello-world-web
